# hello-cross-platform

./: CMakeLists.txt  README.md  runner  runner.bat  version-script.txt
cmake/: CMakeLists.txt
cmake/utils/: common.cmake  ios.cmake  ios.toolchain.cmake
src/: android_wrapper.cpp  main.cpp  time_repository.cpp  time_repository.h
tool/: __main__.py  android_build_executor.py  android_project_generator.py  build_executor.py  build_executor_factory.py  cleaner.py  cmake_utils.py  cygwin_build_executor.py  cygwin_project_generator.py  gradle.py  ios_build_executor.py  ios_project_generator.py  path_utils.py  project_generator.py  project_generator_factory.py  unix_build_executor.py  unix_project_generator.py
tool/android/: build.gradle  settings.gradle
tool/android/exampleapp/: build.gradle
tool/android/exampleapp/src/main/: AndroidManifest.xml
tool/android/exampleapp/src/main/java/vn/nganht/helloworld/exampleapp/: MainActivity.kt
tool/android/gradle/wrapper/: gradle-wrapper.properties
tool/android/helloworld/: build.gradle.jinja2
tool/android/helloworld/src/main/: AndroidManifest.xml
tool/android/helloworld/src/main/java/vn/nganht/helloworld/: TimeRepository.java
tool/ios/exampleapp/: AppDelegate.h  AppDelegate.m  LaunchScreen.storyboard  Main.storyboard  ViewController.mm  main.m
